--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcsh 'Children''s stories'
 - !lcsh 'Children -- Conduct of life -- Juvenile fiction'
 - !lcsh 'Conduct of life -- Juvenile fiction'
+- GITenberg
 title: Forgotten Tales of Long Ago
 url: http://www.gutenberg.org/ebooks/28679
